--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="ip-main">
 				<p style="color: white;">
-					Послуга </br><hr/>
+					Послуга1 </br><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/>
 					300 грн.
 					</p>
