--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 				<span class="right"><a href="#"><span></span></a></span>
 			</div>
 			<div class="ip-main">
-				<center><p style="color: white;">
-					Послуга </br><hr/>
+				<center><p style="color: white;"><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
 					<h2><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">300 грн.</span></h2>
 					</p>
