--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body class="demo-1">
 		<div id="ip-container" class="ip-container">
 			<header class="ip-header">
-				<h1 class="ip-logo">
+				<h1 class="ip-logo" style="background-color: f1f1f1;">
 						<img src="img/logo.png" width="350" height="270" alt="Лого НПП 'Північне Поділля'" style="margin:0 auto;display:block;">
 				</h1>
 				<div class="ip-loader">
