--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 			<div class="codrops-top clearfix">
 				<span class="right"><a href="#"><span></span></a></span>
 			</div>
-			<div class="ip-main">
-				<center><p style="color: white;"><hr/>
+			<div class="ip-main" style="margin-top: -150px;">
+				<center><p style="color: white;">
+					Послуга </br><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
 					<h2><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">300 грн.</span></h2>
 					</p>
