--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="codrops-top clearfix">
 				<span class="right"><a href="#"><span></span></a></span>
 			</div>
-			<div class="ip-main" style="margin-top: -150px;">
+			<div class="ip-main">
 				<center><p style="color: white;">
 					Послуга </br><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
