--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</p>
 					</center>
 				<div class="browser clearfix" style="margin-top: -50px;">
-					<div><center><img src="https://part1995.github.io/podillya/img/реквізити.svg" width="100%" height="100%"/></center></div>
+					<div><center><img src="https://raw.githubusercontent.com/part1995/podillya/530f1e490faf4d61e66ef4e64abe63da0b26153f/img/rekvizuty.svg" width="100%" height="100%"/></center></div>
 				</div>
 			</div>
 		</div>
