--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				<center><p style="color: white;">
 					Послуга </br><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
-					<h2><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">300 грн.</span></h2>
+					<h2 style="padding-bottom:5px;"><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">Група до 10 чоловік - 300 грн.</span></h2>
+					<h2 style="padding-bottom:5px;"><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">Школярі, студенти - 20 грн.</span></h2>
+					<h2 style="padding-bottom:5px;"><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">Дорослі - 30 грн.</span></h2>
 					</p>
 					</center>
 				<div class="browser clearfix" style="margin-top: -50px;">
