--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="robots" content="noindex,nofollow" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"</title>
+		<title>Проведення рекреаційно-розважальних спортивно-туристичних заходів на території НПП "Північне Поділля"</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/effect1.css" />
@@ -26,8 +26,9 @@
 			<div class="ip-main">
 				<center><p style="color: white;">
 					Послуга </br><hr/>
-					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
-					<h2><span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px;">300 грн.</span></h2>
+					Проведення рекреаційно-розважальних спортивно-туристичних заходів на території НПП "Північне Поділля"<hr/></br>
+					<p span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Школярі, студенти - 20 грн.</p>
+					<p span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Дорослі - 30 грн.</p>
 					</p>
 					</center>
 				<div class="browser clearfix" style="margin-top: -50px;">
