--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				<center><p style="color: white;">
 					Послуга </br><hr/>
 					Проведення піших природничо-краєзнавчих екскурсій по екологічно-пізнавальних туристичних маршрутах НПП "Північне Поділля"<hr/></br>
-					<p style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Група до 10 чоловік - 300 грн.</p>
-					<p span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Школярі, студенти - 20 грн.</p>
-					<p span style="border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Дорослі - 30 грн.</p>
+					<p style="background-color: white; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Група до 10 чоловік - 300 грн.</p>
+					<p span style="background-color: white; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Школярі, студенти - 20 грн.</p>
+					<p span style="background-color: white; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Дорослі - 30 грн.</p>
 					</p>
 					</center>
 				<div class="browser clearfix" style="margin-top: -50px;">
