--- a/index3.html
+++ b/index3.html
@@ -27,8 +27,8 @@
 				<center><p style="color: white;">
 					Послуга </br><hr/>
 					Проведення лижних мандрівок по ділянках НПП "Північне Поділля" та по територіях в межах діяльності установи<hr/></br>
-					<p span style="background-color: white; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Школярі, студенти - 20 грн.</p>
-					<p span style="background-color: white; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Дорослі - 30 грн.</p>
+					<p span style="background-color: white; color: black; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Школярі, студенти - 20 грн.</p>
+					<p span style="background-color: white; color: black; border: 1px solid white; border-radius: 28px; padding: 10px 20px 10px 20px; flex-wrap: wrap; font-size: 150%; margin-bottom: 10px;">Дорослі - 30 грн.</p>
 					</p>
 					</center>
 				<div class="browser clearfix" style="margin-top: -50px;">
